add filter project

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <a id="seven" href="Testimonials project/index.html">
         <p>Testimonials project</p>
     </a>
+    <a id="seven" href="Filter project/index.html">
+        <p>Testimonials project</p>
+    </a>
     
 </body>
 </html>
