--- a/index.html
+++ b/index.html
@@ -9,30 +9,31 @@
 </head>
 <body>
 
-    <a id="one" href="Background Image Slider Project/index.html">
+    <a class="box" href="Background Image Slider Project/index.html">
         <p>Background Image Slider Project</p>
     </a>
-    <a id="two" href="Change Background Color Project/index.html">
+    <a class="box" href="Change Background Color Project/index.html">
         <p>Change Background Color Project</p>
     </a>
-    <a id="three" href="Counter Project/index.html">
+    <a class="box" href="Counter Project/index.html">
         <p>Counter Project</p>
     </a>
-    <a id="four" href="Hex Change Background Color Project/index.html">
+    <a class="box" href="Hex Change Background Color Project/index.html">
         <p>Hex Change Background Color Project</p>
     </a>
-    <a id="five" href="Pass the Message Project/index.html">
+    <a class="box" href="Pass the Message Project/index.html">
         <p>Pass the Message Project</p>
     </a>
-    <a id="six" href="Random Quotes Project/index.html">
+    <a class="box" href="Random Quotes Project/index.html">
         <p>Random Quotes Project</p>
     </a>
-    <a id="seven" href="Testimonials project/index.html">
+    <a class="box" href="Testimonials project/index.html">
         <p>Testimonials project</p>
     </a>
-    <a id="seven" href="Filter project/index.html">
+    <a class="box" href="Filter project/index.html">
         <p>Testimonials project</p>
     </a>
+
     
 </body>
 </html>
