--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <p>Random Quotes Project</p>
     </a>
     <a class="box" href="Testimonials project/index.html">
-        <p>Testimonials project</p>
+        <p>Testimonials Project</p>
     </a>
     <a class="box" href="Filter project/index.html">
-        <p>Testimonials project</p>
+        <p>Filter Project</p>
     </a>
 
     
