--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <a class="box" href="Random Quotes Project/index.html">
         <p>Random Quotes Project</p>
     </a>
-    <a class="box" href="Testimonials project/index.html">
+    <a class="box" href="Testimonials Project/index.html">
         <p>Testimonials Project</p>
     </a>
-    <a class="box" href="Filter project/index.html">
+    <a class="box" href="Filter Project/index.html">
         <p>Filter Project</p>
     </a>
     
