add modal project

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <a class="box" href="Filter Project/index.html">
         <p>Filter Project</p>
     </a>
+    <a class="box" href="Modal Project/index.html">
+        <p>Modal Project</p>
+    </a>
     
 </body>
 </html>
