add calculator project

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <a class="box" href="Modal Project/index.html">
         <p>Modal Project</p>
     </a>
+    <a class="box" href="Calculator Project/index.html">
+        <p>Calculator Project</p>
+    </a>
     
 </body>
 </html>
