--- a/Calculator Project/index.html
+++ b/Calculator Project/index.html
@@ -15,24 +15,24 @@
         <div id="screen"></div>
         <div class="buttons">
             <button class="remove">C</button>
-            <button class="btn operators">x</button>
             <button class="btn operators">(</button>
             <button class="btn operators">)</button>
-            <button class="btn num" data-num="1">1</button>
-            <button class="btn num" data-num="2">2</button>
+            <button class="btn operators">/</button>
+            <button class="btn num">1</button>
+            <button class="btn num">2</button>
             <button class="btn num">3</button>
-            <button class="btn operators" data-num="+">+</button>
+            <button class="btn operators">*</button>
             <button class="btn num">4</button>
             <button class="btn num">5</button>
             <button class="btn num">6</button>
-            <button class="btn operators">-</button>
+            <button class="btn operators">+</button>
             <button class="btn num">7</button>
             <button class="btn num">8</button>
             <button class="btn num">9</button>
-            <button class="btn operators">/</button>
-            <button class="btn num" data-num="0">0</button>
+            <button class="btn operators">-</button>
+            <button class="btn num">0</button>
             <button class="btn">.</button>
-            <button class="equal" data-num="=">=</button>
+            <button class="equal">=</button>
         </div>
     </div>
 </body>
