add tip calculator project

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <a class="box" href="Calculator Project/index.html">
         <p>Calculator Project</p>
     </a>
+    <a class="box" href="Tip Calculator Project/index.html">
+        <p>Tip Calculator Project</p>
+    </a>
     
 </body>
 </html>
